--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -13,7 +13,12 @@ html {
     text-rendering: optimizeLegibility;
 }
 
-
+.row {
+    max-width: 1140px;
+    /*This is the same as margin: 0     auto    0         auto; */
+    /*                    margin: top   left    bottom    right;*/
+    margin: 0 auto 0 auto;
+}
 
 
 
