--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -30,10 +30,6 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     height: 100vh;
 }
 
-h1 {
-    margin: 0;
-}
-
 .hero-text-box {
     position: absolute;
     width: 1140px;
@@ -43,12 +39,56 @@ h1 {
     transform: translate(-50%, -50%);
 }
 
+h1 {
+    margin: 0 0 20px 0;
+    color: #ffffff;
+    font-size: 240%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 4px;
+}
 
+.btn:link,
+.btn:visited{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 400;
+    text-decoration: none;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
 
+.btn-full:link,
+.btn-full:visited {
+    background-color: #e67e22;
+    border: 1px solid #e67e22;
+    color: #ffffff;
+    margin-right: 15px;
+}
 
+.btn-ghost:link,
+.btn-ghost:visited {
+    border: 1px solid #e67e22;
+    color: #e67e22;
+}
 
+.btn:hover,
+.btn:active {
+    background-color: #cf6d17;
+}
 
+.btn-full:hover,
+.btn-full:active {
+    /*TODO It would probably be nice to have both buttons switch characteristic if one or the other is hovered*/
+    /*background-color: rgba(0,0,0,0);*/
+    border: 1px solid #e67e22;
+    color: #ffffff;
 
+}
 
-
-
+.btn-ghost:hover,
+.btn-ghost:active {
+    border: 1px solid #cf6d17;
+    color: #ffffff;
+}
