Updated features & favorite meals
Added: After image for favourites
Edited: Favourites size and location in CSS.
Added: Css effect to images in favourites meal
Added: Margin between long-copy and icons in features
Updated: README.md

--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -200,8 +200,21 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 }
 
 /*-----------------------------------------*/
+/* Features */
+/*-----------------------------------------*/
+
+.section-features .long-copy {
+    margin-bottom: 30px;
+}
+
+
+/*-----------------------------------------*/
 /* Meals */
 /*-----------------------------------------*/
+
+.section-meals {
+    padding: 0;
+}
 
 .meals-showcase {
     list-style: none;
@@ -218,9 +231,19 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 .meal-photo {
     width: 100%;
     margin: 0;
+    overflow: hidden;
+    background-color: #000000;
 }
 
 .meal-photo img {
+    opacity: 0.6;
     width: 100%;
     height: auto;
+    transform: scale(1.15);
+    transition: transform 0.2s;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03);
 }
