Updated cities section
Added: After image for cities section
Modified: Image, texts, 3 icons for cities section & twitter link
Updated: README.md

Note from previous commit: added at the bottom of index.html the text for the rest of the web page as a comment.

--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -108,6 +108,37 @@ h2:after {
     margin-bottom: 10px;
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+    margin-right: 10px;
+
+    /*secrets to align texts and icons*/
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -5px;
+}
+
+/* ------ Links ------ */
+a:link,
+a:active {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+a:hover,
+a:visited {
+    color: #555555;
+    border-bottom: 1px solid transparent;
+}
+
+
 /* ------ Buttons ------ */
 .btn:link,
 .btn:visited{
@@ -306,8 +337,29 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 
 }
 
+.btn-app:link,
+.btn-app:visited{
+    border: 0;
+}
+
 .btn-app img {
     height: 50px;
     width: auto;
     margin-right: 10px;
 }
+
+/*-----------------------------------------*/
+/* Cities */
+/*-----------------------------------------*/
+
+.feature-box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-future {
+    margin-bottom: 5px;
+}
+
+
