--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -196,6 +196,8 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     background-position: center;
     /*This will make the header 100% of the viewable area*/
     height: 100vh;
+    background-attachment: fixed;
+
 }
 
 .hero-text-box {
@@ -362,4 +364,43 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     margin-bottom: 5px;
 }
 
+/*-----------------------------------------*/
+/* Testimonials */
+/*-----------------------------------------*/
 
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0,0,0,0.8)), url("img/back-customers.jpg") ;
+    background-size: cover;
+    color: #ffffff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
