--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -144,7 +144,8 @@ a:visited {
 
 /* ------ Buttons ------ */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 400;
@@ -154,7 +155,8 @@ a:visited {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #ffffff;
@@ -168,22 +170,25 @@ a:visited {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit] {
     background-color: #cf6d17;
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     /*TODO It would probably be nice to have both buttons switch characteristic if one or the other is hovered*/
     /*background-color: rgba(0,0,0,0);*/
-    border: 2px solid #ffffff;
+    border: 1px solid #ffffff;
     color: #ffffff;
 
 }
 
 .btn-ghost:hover,
 .btn-ghost:active {
-    border: 2px solid #ffffff;
+    border: 1px solid #ffffff;
     color: #ffffff;
 }
 
@@ -462,4 +467,34 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+/*-----------------------------------------*/
+/* Form */
+/*-----------------------------------------*/
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type =text],
+input[type=email],
+select, textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #cccccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {
+    outline: none;
 }
