--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -132,6 +133,7 @@ a:active {
     text-decoration: none;
     border-bottom: 1px solid #e67e22;
     padding-bottom: 1px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -151,6 +153,7 @@ input[type=submit] {
     font-weight: 400;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -197,6 +200,7 @@ input[type=submit]:active {
 /*-----------------------------------------*/
 
 header { /*background-image url(location of image, linear-gradient adds a gradients*/
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     /*This will make the background(img) fit to header*/
     background-size: cover;
@@ -214,6 +218,7 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     top: 50%;
     left: 50%;
     /*This translate to half of top and left TODO research transform for css*/
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
@@ -243,6 +248,7 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     text-decoration: none;
     text-transform: uppercase;
     font-size: 90%;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
@@ -291,12 +297,17 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     opacity: 0.6;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
+    transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
     transform: scale(1.03);
 }
 
@@ -377,6 +388,7 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 /*-----------------------------------------*/
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url("img/back-customers.jpg");
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/back-customers.jpg");
     background-size: cover;
     color: #ffffff;
@@ -426,6 +438,7 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
+    -webkit-box-shadow: 0 2px 2px #efefef;
     box-shadow: 0 2px 2px #efefef;
 }
 
@@ -537,6 +550,7 @@ footer {
     text-decoration: none;
     border: 0;
     color: #888888;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -554,6 +568,7 @@ footer {
 .ion-social-twitter,
 .ion-social-googleplus,
 .ion-social-instagram {
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
