--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -14,7 +14,7 @@
 html {
     background-color: #ffffff;
     color: #555555;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif, 'Arial';
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
@@ -150,7 +150,7 @@ a:visited {
 input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
-    font-weight: 400;
+    font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
     -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
@@ -229,11 +229,20 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+/* Main Navi */
 .main-nav {
     float: right;
     list-style: none;
     margin-top: 55px;
-
 }
 
 .main-nav li {
@@ -243,11 +252,12 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 
 .main-nav li a:link,
 .main-nav li a:visited {
-    padding: 4px 0;
+    padding: 8px 0;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 90%;
+    border-bottom: 2px solid transparent;
     -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
@@ -257,6 +267,34 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     border-bottom: 2px solid #e67e22;
 }
 
+/* Sticky Navi*/
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.main-nav {
+    margin-top: 18px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555555;
+    }
+
+.sticky .logo {
+    display: none;
+}
+
+.sticky .logo-black {
+    display: block;
+}
+
 /*-----------------------------------------*/
 /* Features */
 /*-----------------------------------------*/
@@ -264,7 +302,6 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 .section-features .long-copy {
     margin-bottom: 30px;
 }
-
 
 /*-----------------------------------------*/
 /* Meals */
