--- a/Section 5/Omnifood/resources/css/style.css
+++ b/Section 5/Omnifood/resources/css/style.css
@@ -274,6 +274,7 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
     left: 0;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.98);
+    -webkit-box-shadow: 0 2px 2px #efefef;
     box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
 }
@@ -286,7 +287,7 @@ header { /*background-image url(location of image, linear-gradient adds a gradie
 .sticky .main-nav li a:visited {
     padding: 16px 0;
     color: #555555;
-    }
+}
 
 .sticky .logo {
     display: none;
@@ -630,4 +631,27 @@ footer p {
     color: #888888;
     text-align: center;
     margin-top: 20px;
+}
+
+/*-----------------------------------------*/
+/* animations */
+/*-----------------------------------------*/
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-4 {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
+    opacity: 1;
 }
