--- a/Section 6/Flexbox/style.css
+++ b/Section 6/Flexbox/style.css
@@ -2,9 +2,9 @@
 /*@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');*/
 
 /* Page Color
-Green = #67b26f
-Blue = #4ca2cd
-Mid = #5aaa9d
+    Green = #67b26f
+    Blue = #4ca2cd
+    Mid = #5aaa9d
 */
 
 * {
@@ -17,7 +17,7 @@ body {
     color: #444444;
     font-family: Roboto;
     padding: 50px;
-    background: linear-gradient(to bottom right, #67b26f,#4ca2cd);
+    background: linear-gradient(to bottom right, #67b26f, #4ca2cd);
     height: 100vh;
 
     display: flex;
@@ -29,7 +29,7 @@ body {
     max-width: 800px;
     border-radius: 4px;
     overflow: hidden;
-    box-shadow: 0 30px 80px 10px rgba(0,0,0,.2);
+    box-shadow: 0 30px 80px 10px rgba(0, 0, 0, .2);
 
     display: flex;
     align-items: stretch;
@@ -45,7 +45,7 @@ body {
     display: block;
 }
 
-.pizza__content{
+.pizza__content {
     flex: 1;
     background: white;
     padding: 35px 30px;
@@ -53,7 +53,7 @@ body {
 
 .pizza__price {
     flex: 0 0 50px;
-    background: linear-gradient(to bottom, #67b26f,#4ca2cd);
+    background: linear-gradient(to bottom, #67b26f, #4ca2cd);
     writing-mode: vertical-rl;
     color: white;
     font-size: 18px;
@@ -82,6 +82,10 @@ body {
     margin-left: 7px;
 }
 
-.pizza__tag--1 { background-color: #67b26f; }
+.pizza__tag--1 {
+    background-color: #67b26f;
+}
 
-.pizza__tag--2 { background-color: #4ca2cd; }
+.pizza__tag--2 {
+    background-color: #4ca2cd;
+}
